package base.Report;

import impl.DataSet;

public interface FinancialReportBase {
    FinancialReportBase generatedFinancialReport(DataSet financeData);
}